fixed the gap

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 
 h1{
-    margin-top: 3rem;
+    margin-top: 7rem;
     font-size: 3rem;
     font-weight: 700;
     text-shadow: 1px 0 #DBEDF3;
